--- a/env/cheyenne/intel-19.1.1
+++ b/env/cheyenne/intel-19.1.1
@@ -9,10 +9,16 @@ module load intel/19.1.1
 module load ncarcompilers/0.5.0
 module load mpt/2.25
 module use /glade/p/cesmdata/cseg/PROGS/modulefiles/esmfpkgs/intel/19.1.1
-module load esmf-8.4.0b14-ncdfio-mpt-g
+module load esmf-8.5.0-ncdfio-mpt-O
 module load netcdf-mpi/4.8.1
 module load pnetcdf/1.12.2
 module load pio/2.5.8
-module load cmake/3.18.2
+module load cmake/3.22.0
 
 module list
+
+export NETCDF_ROOT=$NETCDF
+export CC=mpicc
+export CXX=mpicxx
+export FC=mpif90
+export F90=mpif90
